# ttplayer-next

./: .gitignore  1.md  Cargo.toml  README.md  batch-editor.html  index.html  lyrics-desktop.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
crates/tt-common/: Cargo.toml
crates/tt-common/src/: types.rs
crates/tt-core/: Cargo.toml
crates/tt-core/benches/: dsp.rs
crates/tt-core/src/: buffer.rs  lib.rs  output.rs  skin.rs
crates/tt-core/src/codecs/: ac3_adapter.rs  ape_adapter.rs  mod.rs  stub_codecs.rs  symphonia_adapter.rs  xmrs_adapter.rs
crates/tt-core/src/convert/: mod.rs  wav_encoder.rs
crates/tt-core/src/data/builtin-skins/default/: skin.json
crates/tt-core/src/data/builtin-skins/green/: skin.json
crates/tt-core/src/data/builtin-skins/rose/: skin.json
crates/tt-core/src/data/builtin-skins/ttplayer-blue/: skin.json
crates/tt-core/src/dsp/: biquad.rs  crossfade.rs  equalizer.rs  fade.rs  mod.rs  replay_gain.rs  spectrum.rs  surround.rs
crates/tt-core/src/lyrics/: mod.rs  parser.rs  provider.rs  timing.rs
crates/tt-core/src/player/: crossfade_bridge.rs  decode_thread.rs  mod.rs  transport.rs
crates/tt-playlist/: Cargo.toml
crates/tt-playlist/src/: lib.rs
crates/tt-tags/: Cargo.toml
crates/tt-tags/src/: lib.rs
e2e/: app.spec.ts  setup.ts
scripts/: sync-version.mjs
src/: App.tsx  batch-editor.tsx  desktop-lyrics.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: hotkeys.rs  lib.rs  main.rs  state.rs  tray.rs
src-tauri/src/commands/: convert.rs  desktop_lyrics.rs  file_props.rs  lyrics.rs  mod.rs  player.rs  playlist.rs  skin.rs  tags.rs  theme.rs
src/components/: BatchTagEditor.module.css  BatchTagEditor.tsx  CustomTitleBar.module.css  CustomTitleBar.tsx  FilePropertiesDialog.module.css  FilePropertiesDialog.tsx  FormatConverter.module.css  FormatConverter.tsx  MiniMode.module.css  MiniMode.tsx  SettingsPanel.module.css  SettingsPanel.tsx  SkinProvider.tsx  SkinSelector.module.css  SkinSelector.tsx  TagEditor.module.css  TagEditor.tsx  ThemeProvider.tsx
src/components/MainPanel/: Equalizer.module.css  Equalizer.tsx  KaraokeLine.tsx  LyricsPanel.module.css  LyricsPanel.tsx  MainPanel.module.css  MainPanel.tsx  PlaylistPanel.module.css  PlaylistPanel.tsx  Spectrum.module.css  Spectrum.tsx
src/hooks/: useDesktopLyrics.ts  useHotkeys.ts  useLyricsAutoLoad.ts  useOnlineLyricsSearch.ts  usePlaybackActions.ts  usePlayerEvents.ts  useTicker.ts
src/skins/: neon-blue.ttskin
src/skins/neon-blue/: skin.json
src/stores/: lyrics.ts  player.ts  playlist.ts  skin.ts
src/stores/__tests__/: lyrics.test.ts  player.test.ts  playlist.test.ts  skin.test.ts
src/styles/: global.css
src/utils/: ipc.ts  logger.ts
src/utils/__tests__/: ipc.test.ts
