[workspace]
resolver = "2"
members = [
    "crates/tt-common",
    "crates/tt-core",
    "crates/tt-tags",
    "crates/tt-playlist",
    "src-tauri",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
repository = "https://github.com/ttplayer-next/ttplayer-next"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
log = "0.4"
rand = "0.8"

# --- Audio ---
symphonia = { version = "0.6", default-features = false, features = ["aac", "alac", "flac", "mp3", "pcm", "vorbis", "wav", "isomp4", "ogg"] }
xmrs = "0.14"
ape-decoder = "0.3"
oxideav-ac3 = "0.0.9"
oxideav-core = "0.1"
cpal = "0.15"
rustfft = "6"
rubato = "0.14"

# --- Benchmarking ---
criterion = { version = "0.5", features = ["html_reports"] }

# --- Tags ---
lofty = "0.21"

# --- HTTP ---
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-trait = "0.1"

# --- Parsing ---
nom = "7"

# --- Encoding ---
base64 = "0.22"

# --- Tauri ---
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"

# --- Skin ---
zip = "2"
dirs = "6"
