[package]
name = "ttplayer-next"
version.workspace = true
edition.workspace = true

[lib]
name = "ttplayer_next_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog.workspace = true
tauri-plugin-global-shortcut.workspace = true
serde.workspace = true
serde_json.workspace = true
tt-common = { path = "../crates/tt-common" }
tt-core = { path = "../crates/tt-core" }
tt-tags = { path = "../crates/tt-tags" }
tt-playlist = { path = "../crates/tt-playlist" }
tokio.workspace = true
parking_lot.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
rand = "0.8"
dirs.workspace = true
