[package]
name = "tt-core"
version.workspace = true
edition.workspace = true

[dependencies]
tt-common = { path = "../tt-common" }
tt-tags = { path = "../tt-tags" }
symphonia.workspace = true
xmrs.workspace = true
ape-decoder.workspace = true
oxideav-ac3.workspace = true
oxideav-core.workspace = true
cpal.workspace = true
rustfft.workspace = true
rubato.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
parking_lot.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
async-trait.workspace = true
log.workspace = true
zip.workspace = true
dirs.workspace = true
base64.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "dsp"
harness = false
